deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeworkshop
  namespace: demo
spec:
  selector:
    matchLabels:
      app: kubeworkshop
  template:
    metadata:
      labels:
        app: kubeworkshop
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: saiyam911/ossjapan:sha-9319ddf
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kubeworkshop
  namespace: demo
spec:
  selector:
    app: kubeworkshop
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  type: NodePort
  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
  name: kubeworkshop-ingress
  namespace: demo
spec:
  rules:
  - host: navigate.youclusterID
    http:
      paths:
      - backend:
          service:
            name: kubeworkshop
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - demo.youclusterID
    secretName: demo
